[gd_scene load_steps=11 format=3 uid="uid://b8d4g0epnu685"]

[ext_resource type="Script" path="res://Scenes/Interface/crosshair.gd" id="1_4pkdk"]
[ext_resource type="Script" path="res://addons/radial_progress/RadialProgress.gd" id="2_hrpk1"]
[ext_resource type="Script" path="res://Scenes/Interface/active_reload_component.gd" id="3_27vr4"]
[ext_resource type="Texture2D" uid="uid://c8ry85qvmva7r" path="res://Art/cursor_none.svg" id="4_u0bnh"]

[sub_resource type="Animation" id="Animation_6l0yw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:bar_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_67551"]
resource_name = "reload_finished"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:bar_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6mhj"]
_data = {
"RESET": SubResource("Animation_6l0yw"),
"reload_finished": SubResource("Animation_67551")
}

[sub_resource type="Animation" id="Animation_djyso"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vlg83"]
resource_name = "click_effect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_midib"]
_data = {
"RESET": SubResource("Animation_djyso"),
"click_effect": SubResource("Animation_vlg83")
}

[node name="Crosshair" type="Node2D"]
process_mode = 3
script = ExtResource("1_4pkdk")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="RadialProgress" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("2_hrpk1")
radius = 15.0
thickness = 5.0
bar_color = Color(0.226392, 0.983773, 0.225722, 1)
ring = true

[node name="ActiveReloadMarker" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = 3.14159
mouse_filter = 2
script = ExtResource("2_hrpk1")
radius = 15.0
progress = 10.0
thickness = 5.0
bg_color = Color(1, 1, 1, 0)
bar_color = Color(0, 0, 0, 0.835294)
ring = true

[node name="ReloadFinishedEffect" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("2_hrpk1")
radius = 15.0
progress = 100.0
thickness = 5.0
bg_color = Color(0.501961, 0.501961, 0.501961, 0)
bar_color = Color(1, 1, 1, 0)
ring = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/ReloadFinishedEffect"]
libraries = {
"": SubResource("AnimationLibrary_i6mhj")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_midib")
}
speed_scale = 5.0

[node name="ActiveReloadComponent" type="Node" parent="."]
script = ExtResource("3_27vr4")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = -2.0
offset_right = 19.0
offset_bottom = 22.0
mouse_filter = 2
texture = ExtResource("4_u0bnh")
expand_mode = 1

[node name="Rightside" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MagazineLabel" type="Label" parent="Rightside"]
offset_left = 23.0
offset_top = -22.0
offset_right = 74.0
offset_bottom = 1.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
text = "0 / 0"

[node name="InfoLabel" type="RichTextLabel" parent="Rightside"]
offset_left = 23.0
offset_right = 183.0
offset_bottom = 76.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
bbcode_enabled = true
text = "0 - 100"
fit_content = true
scroll_active = false

[node name="Leftside" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MagazineLabel" type="Label" parent="Leftside"]
offset_left = -59.0
offset_top = -23.0
offset_right = -8.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
text = "0 / 0"

[node name="InfoLabel" type="RichTextLabel" parent="Leftside"]
offset_left = -59.0
offset_right = 101.0
offset_bottom = 76.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
bbcode_enabled = true
text = "0 - 100"
fit_content = true
scroll_active = false
